# game_of_life

./: CMakeLists.txt  README.md  main.cpp
Config/: consts.h  patterns.txt
Logic/: statuses.h
Logic/Simulation/: board.cpp  board.h  cell.cpp  cell.h
Logic/Spawning/: spawner.cpp  spawner.h
UI/: cell_painter.cpp  cell_painter.h  window_wrapper.cpp  window_wrapper.h
